<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My App Portfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="header_text">My Nanodegree Apps!</string>
    <string name="lbl_spotify_streamer">Spotify Streamer</string>
    <string name="lbl_scores_app">Scores App</string>
    <string name="lbl_library">Library App</string>
    <string name="lbl_build_it_bigger">Build It Bigger</string>
    <string name="lbl_xyz_reader">XYZ Reader</string>
    <string name="lbl_capstone">Capstone: My Own App</string>

</resources>
