<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#151515"
    android:clickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/header_text"
        android:id="@+id/textView"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal"
        android:textColor="#e4e4e4"
        android:typeface="monospace"
        android:autoText="false" />

    <Button
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_spotify_streamer"
        android:id="@+id/btn_spotify_streamer"
        android:background="#ff7548"
        android:enabled="true"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_scores_app"
        android:id="@+id/btn_scores"
        android:background="#ff7548"
        android:enabled="true"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_library"
        android:id="@+id/btn_library"
        android:background="#ff7548"
        android:enabled="true"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_build_it_bigger"
        android:id="@+id/btn_build_it_bigger"
        android:background="#ff7548"
        android:enabled="true"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_xyz_reader"
        android:id="@+id/btn_xyz_reader"
        android:background="#ff7548"
        android:enabled="true"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_capstone"
        android:id="@+id/btn_capstone"
        android:background="#bbdbff"
        android:enabled="true"
        android:clickable="false"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="15dp" />
</TableLayout>
